...
                            allLinksSection
                        }
                        .padding()
                    }
                }
            }
            .searchable(text: $searchText, isPresented: $searchActive, placement: .navigationBarDrawer(displayMode: .always), prompt: "Search for people, clients, matters")
            .onChange(of: searchText) { oldValue, newValue in
                searchActive = !newValue.isEmpty
            }
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .navigationBarLeading) {
...
